<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:id="@+id/enterRecordNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterRecordNameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/enterInitValueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterInitialRecordValue"
        android:inputType="number" />

    <EditText
        android:id="@+id/enterCommentsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.31"
        android:ems="10"
        android:hint="@string/enterComments"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveRecordButton" />

</LinearLayout>